# kazkazi-chat

./: .gitignore  docker-compose.yml
.github/workflows/: build.yml  deploy.yml
api/: README.md  dockerfile  pyproject.toml
api/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py
api/app/routes/: auth.py  chat.py
web/: .env.local  .env.production  dockerfile  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/chat/: page.tsx
web/src/app/hooks/: useAutoScroll.ts
web/src/app/logout/: page.tsx
web/src/app/ui/: Button.tsx  ChartBlock.tsx  ChatWindow.tsx  CodeBlock.tsx  Footer.tsx  Header.tsx  MarkdownRenderer.tsx  Profile.tsx
web/src/lib/: api.ts  auth0.ts
