[project]
name = "kazkazi-chat-api"
version = "0.1.0"
description = "API for the Kazkazi chat"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.3",
    "fastapi[standard]>=0.115.12",
    "openai>=1.82.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
